fix(with-without): fix self-drawing circle too big on monster size

--- a/packages/components/bolt-self-drawing-circle/src/self-drawing-circle.scss
+++ b/packages/components/bolt-self-drawing-circle/src/self-drawing-circle.scss
@@ -3,9 +3,7 @@
 .bolt-self-drawing-circle {
   display: inline-block;
   width: 100%;
-  max-width: 502px;
   height: 100%;
-  max-height: 502px;
 
   &.rotate {
     animation: 10000ms linear infinite spin;
