--- a/packages/components/bolt-with-without/with-without.scss
+++ b/packages/components/bolt-with-without/with-without.scss
@@ -322,7 +322,9 @@ $pega-wwo--sm-circle-top-margin--mobile: $bolt-medium-icon-half-size - ($pega-ww
     display: none;
     position: relative;
     width: 100%;
+    max-width: 502px;
     height: 100%;
+    max-height: 502px;
 
     @include bolt-mq($from: xlarge) {
       display: block;
